--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -20,10 +20,31 @@
         </div>
       </div>
       {% if user.is_staff %}
-      <a href="{% url 'eliminar' model='Album' oid=o.id %}" class="btn btn-danger btn-sm ml-1" role="button">Eliminar</a>
+      <button type="button" class="btn btn-danger btn-sm ml-1" data-toggle="modal" data-target="#delete-confirmation-album-{{o.id}}">Eliminar</button>
       <a href="{% url 'modificar' model='Album' oid=o.id %}" class="btn btn-warning btn-sm ml-1" role="button">Modificar</a>
       {% endif %}
     </li>
+    <!-- dialogo modal de eliminación -->
+    <div class="modal fade" role="dialog" tabindex="-1" id="delete-confirmation-album-{{o.id}}" aria-labelledby="delete-confirmation-album-{{o.id}}" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Eliminar Álbum</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Estás seguro de que quieres eliminar el álbum {{o}}?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+              <a href="{% url 'eliminar' model='Album' oid=o.id %}" role="button" class="btn btn-danger">Eliminar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
   {% endfor %}
 </ul>
 
@@ -33,10 +54,31 @@
     <li>
       <p>{{ o }}</p>
       {% if user.is_staff %}
-      <a href="{% url 'eliminar' model='Musico' oid=o.id %}" class="btn btn-danger btn-sm ml-1" role="button">Eliminar</a>
+      <button type="button" class="btn btn-danger btn-sm ml-1" data-toggle="modal" data-target="#delete-confirmation-musico-{{o.id}}">Eliminar</button>
       <a href="{% url 'modificar' model='Musico' oid=o.id %}" class="btn btn-warning btn-sm ml-1" role="button">Modificar</a>
       {% endif %}
     </li>
+    <!-- dialogo modal de eliminación -->
+    <div class="modal fade" role="dialog" tabindex="-1" id="delete-confirmation-musico-{{o.id}}" aria-labelledby="delete-confirmation-musico-{{o.id}}" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Eliminar Músico</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Estás seguro de que quieres eliminar el músico {{o}}?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+              <a href="{% url 'eliminar' model='Musico' oid=o.id %}" role="button" class="btn btn-danger">Eliminar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
   {% endfor %}
 </ul>
 
@@ -62,10 +104,30 @@
       <li>
         <p>{{ o }}</p>
        {% if user.is_staff %}
-        <a href="{% url 'eliminar' model='Grupo' oid=o.id %}" class="btn btn-danger btn-sm ml-1" role="button">Eliminar</a>
+        <button type="button" class="btn btn-danger btn-sm ml-1" data-toggle="modal" data-target="#delete-confirmation-grupo-{{o.id}}">Eliminar</button>
         <a href="{% url 'modificar' model='Grupo' oid=o.id %}" class="btn btn-warning btn-sm ml-1" role="button">Modificar</a>
        {% endif %}
       </li>
+        <!-- dialogo modal de eliminación -->
+      <div class="modal fade" role="dialog" tabindex="-1" id="delete-confirmation-grupo-{{o.id}}" aria-labelledby="delete-confirmation-grupo-{{o.id}}" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Eliminar Grupo</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Estás seguro de que quieres eliminar el grupo {{o}}?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+              <a href="{% url 'eliminar' model='Grupo' oid=o.id %}" role="button" class="btn btn-danger">Eliminar</a>
+            </div>
+          </div>
+        </div>
+      </div>
     {% endfor %}
   </ul>
 
@@ -83,4 +145,5 @@
     </ul>
   </nav>
   </div>
+
 {% endblock %}
